--- a/index.html
+++ b/index.html
@@ -82,15 +82,37 @@
 <canvas id="iconCanvas"></canvas>
     <div class="content-box">
         <h1>Dueling Trials</h1>
-        <p style="font-size: 1.6em;"><strong>Created by Zenetal</strong></p>
-        <p>2018-2025</p>
-        <h2>Graphics</h2>
-        <p>Made and patched by Sednaiur, PROX,</p>
-        <p>DARKMECHA, h2643 and Zenetal</p>
-        <h2>Music</h2>
-        <p>None of the music is by Zenetal; some</p>
-        <p>credits can be found in the files</p>
-        <p class="footer-text">More detailed credits can be found in the episode<br>folder and in some specific levels</p>
+        <h2>Description</h2>
+        <p>Dueling Trials is a local multiplayer SMBX2</p>
+        <p>episode that features two minigames called</p>
+        <p>Battle Blitz and Race Rivals.</p>
+        <p>ㅤ</p>
+        <p>Battle Blitz is a modern version of the</p>
+        <p>old SMBX 1.3 Battle Mode, where your goal</p>
+        <p>is to take all of your opponent's lives.</p>
+        <p>Race Rivals is a minigame that's sort of similar</p>
+        <p>to Mario Kart, where you must stay ahead of your</p>
+        <p>opponent in time or reach the finish line</p>
+        <p>first in order to win the match.</p>
+        <h2>Download</h2>
+        <p>The forums link to download the latest version</p>
+        <p>of the episode is available below. You can</p>
+        <p>also find the changelog and older versions</p>
+        <p>of Dueling Trials in the same link.</p>
+        <p>ㅤ</p>
+        <a href="https://www.smbxgame.com/forums/viewtopic.php?t=30270" target="_blank" style="
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #4c8baf;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-family: sans-serif;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            " onmouseover="this.style.backgroundColor='#204d68'" onmouseout="this.style.backgroundColor='#4c8baf'">
+            Download Latest v1.2
+        </a>
     </div>
 <script>
 const canvas = document.getElementById("iconCanvas");
@@ -102,8 +124,8 @@ iconImg.src = "icons.png";
 const bgImg = new Image();
 bgImg.src = "bg.png";
 
-const bgSpeedX = -0.2;
-const bgSpeedY = 0.6;
+const bgSpeedX = -0.1;
+const bgSpeedY = 0.3;
 const iconSize = 128;
 const spacing = 128;
 
