--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <h1>Dueling Trials</h1>
         <h2>Description</h2>
         <p>Dueling Trials is a local multiplayer SMBX2</p>
-        <p>episode that features two minigames called</p>
-        <p>Battle Blitz and Race Rivals.</p>
-        <p>ㅤ</p>
+        <p>episode that features a few minigames to</p>
+        <p>play with your friends locally.</p>
+        <h2>About minigames</h2>
         <p>Battle Blitz is a modern version of the</p>
         <p>old SMBX 1.3 Battle Mode, where your goal</p>
         <p>is to take all of your opponent's lives.</p>
@@ -94,6 +94,12 @@
         <p>to Mario Kart, where you must stay ahead of your</p>
         <p>opponent in time or reach the finish line</p>
         <p>first in order to win the match.</p>
+        <p>Shell Snatch is a competitive minigame where</p>
+        <p>your goal is to steal your opponent's shell</p>
+        <p>and place it on your own shell platform.</p>
+        <p>The player who scores the most points before</p>
+        <p>time runs out, or reaches the point limit first,</p>
+        <p>is declared the winner.</p>
         <h2>Download</h2>
         <p>The forums link to download the latest version</p>
         <p>of the episode is available below. You can</p>
@@ -111,7 +117,7 @@
             font-weight: bold;
             transition: background-color 0.3s;
             " onmouseover="this.style.backgroundColor='#204d68'" onmouseout="this.style.backgroundColor='#4c8baf'">
-            Download Latest v1.3
+            Download Latest Version
         </a>
     </div>
 <script>
