--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <h1>Dueling Trials</h1>
         <h2>Description</h2>
         <p>Dueling Trials is a local multiplayer SMBX2</p>
-        <p>episode that features a few minigames to</p>
-        <p>play with your friends locally.</p>
+        <p>episode that features a few minigames</p>
+        <p>to play with your friends.</p>
         <h2>About minigames</h2>
         <p>Battle Blitz is a modern version of the</p>
         <p>old SMBX 1.3 Battle Mode, where your goal</p>
